# ROS2IE-AI

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: _smoke_test.py  basic_navigation.py  diagnostics_demo.py  full_sensor_demo.py
examples/upload_profiles/: dog_policy_profile.json  humanoid_physics_profile.json  universal_robot_profile_humanoid_v1.json
ros2_agent/: __init__.py  __main__.py
ros2_agent/agent/: __init__.py  core.py  graph.py
ros2_agent/analytics/: scorecard.py
ros2_agent/cli/: app.py
ros2_agent/config/: __init__.py  settings.py
ros2_agent/ros2/: __init__.py  bridge.py  mock.py
ros2_agent/simulation/: __init__.py  robot_sim.py
ros2_agent/tools/: __init__.py  actions.py  diagnostics.py  launch.py  logs.py  nodes.py  params.py  services.py  topics.py
ros2_agent/web/: app.py
ros2_agent/web/static/: dashboard.html  index.html
tests/: conftest.py  test_tools.py
