[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ros2-agent"
version = "0.1.0"
description = "LLM-powered agent for controlling, monitoring, and debugging ROS 2 robots using natural language"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ROS2 Agent Contributors" }]
keywords = ["ros2", "robotics", "llm", "agent", "ai", "langgraph", "langchain", "natural-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-ollama>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.47",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/ros2-agent/ros2-agent"
Documentation = "https://ros2-agent.readthedocs.io"
Repository = "https://github.com/ros2-agent/ros2-agent"
Issues = "https://github.com/ros2-agent/ros2-agent/issues"
Changelog = "https://github.com/ros2-agent/ros2-agent/blob/main/CHANGELOG.md"

[project.scripts]
ros2-agent = "ros2_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ros2_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ros2_agent"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
